--- a/src/assets/lang/sectionLeft.json
+++ b/src/assets/lang/sectionLeft.json
@@ -5,7 +5,10 @@
         "agendaVirtual": "Agenda Virtual",
         "calificaciones": "Calificaciones",
         "calendario": "Calendario",
-        "misClases": "Mis clases"
+        "misClases": "Mis clases",
+
+        "tituloTokenExpirado": "Saliendo ...",
+        "tokenExpirado": "Parece que tu sesion ha finalizado !"
     },
     "en": {
         "inicio": "Home",
@@ -13,6 +16,9 @@
         "agendaVirtual": "Virtual Schedule",
         "calificaciones": "Marks",
         "calendario": "Calendar",
-        "misClases": "My classes"
+        "misClases": "My classes",
+
+        "tituloTokenExpirado": "Leaving ...",
+        "tokenExpirado": "Looks like your session is over !"
     }
 }
