fix errores de traduccion

--- a/src/assets/lang/listadoTareas.json
+++ b/src/assets/lang/listadoTareas.json
@@ -30,6 +30,7 @@
         "alumnoCedula": "Cedula",
         "alumnoNombre": "Nombre",
         "sinCalificar": "S / C",
+        "confirmarEliminacion": "¿ Estas seguro que quieres eliminar ?",
         "algoSalioMal": "Parece que algo salio mal ...",
         "cancelar": "Cancelar",
         "tareaEliminada": "Tarea eliminada correctamente",
@@ -68,11 +69,12 @@
         "hagaClickParaVerEntregas": "Click to view deliveries",
         "alumnoFoto": "Photo",
         "alumnoCedula": "ID",
+        "confirmarEliminacion": "Are you sure you want to delete?",
         "alumnoNombre": "Name",
         "sinCalificar": "N / Q",
         "algoSalioMal": "It seems that something went wrong...",
         "cancelar": "Abort",
-        "tareaEliminada": "Task successfully completed",
+        "tareaEliminada": "Task successfully deleted",
         "cargando": "Loading...",
         "creandoTarea": "We are creating your task !",
         "tareaCreada": "Task created",
