visitarPerfil en ing

--- a/src/assets/lang/profile.json
+++ b/src/assets/lang/profile.json
@@ -32,7 +32,7 @@
         "cambiarFoto": "Change Photo",
         "tipoDeUsuario": "Type of User",
         "profesor": "Teacher",
-        "alumno": "Stundent",
+        "alumno": "Student",
         "ci": "ID",
         "grupo": "Group",
         "nombreCompleto": "Full Name",
