listado tareas alumno fix

--- a/src/assets/lang/listadoTareas.json
+++ b/src/assets/lang/listadoTareas.json
@@ -25,6 +25,7 @@
         "historialCorreciones": "Historial de Correciones",
         "eliminar": "Eliminar",
         "vencio": "Vencio",
+        "verTareaAlumno": "Presione click para ver la tarea",
         "hagaClickParaVerEntregas": "Haga click para visualizar las entregas",
         "alumnoFoto": "Foto",
         "alumnoCedula": "Cedula",
@@ -66,6 +67,7 @@
         "historialCorreciones": "History of Corrections",
         "eliminar": "Remove",
         "vencio": "Expired",
+        "verTareaAlumno": "Click to see the task",
         "hagaClickParaVerEntregas": "Click to view deliveries",
         "alumnoFoto": "Photo",
         "alumnoCedula": "ID",
