cambios en metodo que se sube files

--- a/src/assets/lang/home.json
+++ b/src/assets/lang/home.json
@@ -10,7 +10,7 @@
         "archivoMayor50": "El tamamaño del archivo es mayor a 50 mb",
         "maximo3Archivos": "Solo se permite 3 archivos por publicacion",
         "enviando": "Enviando...",
-        "enviandoTuPublicacion": "Estamos creando tu publicacion !",
+        "enviandoTuPublicacion": "Creando tu publicacion !",
         "algoSalioMal": "Parece que algo salio mal ...",
         "confirmarEliminacion": "¿ Estas seguro que quieres eliminar ?",
         "btnEliminar": "Eliminar",
@@ -29,7 +29,7 @@
         "archivoMayor50": "File size is bigger than 50 mb",
         "maximo3Archivos": "Only 3 files are allowed per publication",
         "enviando": "Sending...",
-        "enviandoTuPublicacion": "We are making your post !",
+        "enviandoTuPublicacion": "Making your post !",
         "algoSalioMal": "It seems that something went wrong...",
         "confirmarEliminacion": "Are you sure you want to delete?",
         "btnEliminar": "Delete",
