fix al traducir en ing

--- a/src/assets/lang/agendaVirtual.json
+++ b/src/assets/lang/agendaVirtual.json
@@ -29,7 +29,7 @@
         "title": "Virtual Schedule",
         "agendarClaseVirtual": "Schedule Virtual Class",
         "agendarClase": "Schedule a class",
-        "registroClases": "Class Registration",
+        "registroClases": "Register of classes",
         "historialFaltas": "Faults history",
         "camposVaciosAlert": " All fields below must be completed in order to schedule a class. ",
         "grupos": "Groups",
