--- a/src/assets/lang/registroClases.json
+++ b/src/assets/lang/registroClases.json
@@ -18,7 +18,7 @@
         "title": "Registration Lists",
         "registroClasesPasadas": "Registration of Past Lists",
         "agendarClase": "Schedule a class",
-        "registroClases": "Class Registration",
+        "registroClases": "Register of classes",
         "historialFaltas": "Faults history",
         "placeholderSeleccioneGrupoYMateria": "Select Group and Subject",
         "seleccioneGrupo": "Choose group",
