--- a/src/assets/lang/registroDeFaltas.json
+++ b/src/assets/lang/registroDeFaltas.json
@@ -19,7 +19,7 @@
         "title": "Delivery History",
         "registroListasPasadas": "Registration of Past Lists",
         "agendarClase": "Schedule a class",
-        "registroClases": "Class Registration",
+        "registroClases": "Register of classes",
         "historialFaltas": "Faults history",
         "cedula": "ID",
         "nombre": "Full Name",
