about it "cambiar los links"

--- a/src/assets/lang/dashboard.json
+++ b/src/assets/lang/dashboard.json
@@ -12,7 +12,10 @@
         "texto5": "Una plataforma que los estudiantes aman",
         "texto6": "Aumenta tu seguridad, encuentra tu voz y experimenta lo que significa ser un ciudadano digital. Potencia tu aprendizaje y forma parte de una vibrante comunidad de aulas.",
         "noticias": "Noticias",
-        "publicadoPor": "Publicado por"
+        "publicadoPor": "Publicado por",
+        "MAlumnos":"Manual Alumno",
+        "MProfesores":"Manual Profesor",
+        "Tutorial":"Tutorial"
     },
     "en": {
         "title": "Main page",
@@ -27,6 +30,9 @@
         "texto5": "A platform that students love",
         "texto6": "Increase your confidence, find your voice and experience what it means to be a digital citizen. Empower your learning and be part of a vibrant classroom community.",
         "noticias": "News",
-        "publicadoPor": "Published by"
+        "publicadoPor": "Published by",
+        "MAlumnos":"Students handbook",
+        "MProfesores":"Teachers handbook",
+        "Tutorial":"Tutorial"
     }
 }
