--- a/src/assets/lang/home.json
+++ b/src/assets/lang/home.json
@@ -45,6 +45,6 @@
         "publico": "Public",
         "NoticiaPublicada": "New published successfull",
         "error": "Something went wrong",
-        "usernamePublico": " I publish news from site"
+        "usernamePublico": "publish news from site"
     }
 }
