Rip off perfil from the left and the noti sction

--- a/src/assets/lang/sectionRight.json
+++ b/src/assets/lang/sectionRight.json
@@ -13,7 +13,8 @@
         "nuevaReCorreccion": "Nueva re-corrección creada",
         "nuevaCorreccion": "Nueva corrección creada",
         "soliciudReEntrega": "Solicitud de re-entrega",
-        "misClases": "Mis clases"
+        "misClases": "Mis clases",
+        "misGrupos":"Mis Grupos"
     },
     "en": {
         "sinNotificaciones": "No notifications",
@@ -29,6 +30,7 @@
         "nuevaReCorreccion": "A new re-correction was register",
         "nuevaCorreccion": "A new correction was register",
         "soliciudReEntrega": "Re-delivery request",
-        "misClases": "My subjects"
+        "misClases": "My subjects",
+        "misGrupos":"Groups"
     }
 }
